@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedX():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # shootStrategy:ShootStrategy
    # shootNum:int
    # direction:int
    # power:int
    # startAngle:double
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + setShootStrategy(ShootStrategy shootStrategy): void
    + setShootNum(int shootNum): void
    + setStartAngle(): void
    + getShootNum(): int
    + getDirection(): int
    + getPower(): int
    + getStartAngle(): double
    + getHp():int
    + shoot():List<BaseBullet>
 }

abstract class AbstractEnemyAircraft{
    # score: int
    # propNum: int
    # propFactory: PropFactory
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + forward(): void
    + getScore(): int
    + generateNewProp(): List<BaseProp>
    + update(): int
}
AbstractAircraft <|-- AbstractEnemyAircraft

class HeroAircraft {
    - instance: HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance(): HeroAircraft
    + increaseHp(int increase): void
    + forward(): void
}
AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + shoot():List<BaseBullet>
    + generateNewProp():List<BaseProp>
}
AbstractEnemyAircraft <|-- MobEnemy

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
}
AbstractEnemyAircraft <|-- EliteEnemy

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + update(): int
}
AbstractEnemyAircraft <|-- ElitePlusEnemy

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + update(): int
}
AbstractEnemyAircraft <|-- BossEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + update(): int
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class BaseProp
{
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + BaseProp()
    + forward():void
    + directShoot(HeroAircraft heroAircraft): void
}

class BloodProp {
    - blood:int
    + BloodProp(int locationX, int locationY,int speedX, int speedY)
    + addBlood(HeroAircraft heroAircraft): void
}
class BombProp {
    - observers: List<BombObserver>
    + BombProp(int locationX, int locationY,int speedX, int speedY)
    + addObserver(BombObserver observer):void
    + removeObserver(BombObserver observer):void
    + bomb(): int
}
class BulletProp {
    + BulletProp(int locationX, int locationY,int speedX, int speedY)
    + scatterShoot(HeroAircraft heroAircraft): void
}
BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp

@enduml